--- a/sheepit.toml
+++ b/sheepit.toml
@@ -3,5 +3,5 @@ enable_commit = true
 
 [[transforms]]
 path = 'library/build.gradle.kts'
-replace = 'version = "{version}"'
+replace = 'version = if (System.getenv("TRANSCRIBE_SNAPSHOT") != null) "1.0.0-SNAPSHOT" else "{version}"'
 
