--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,3 +29,4 @@ kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref =
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 vanniktech-mavenPublish = { id = "com.vanniktech.maven.publish", version.ref = "vanniktechMavenPublish" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
+benManesVersions = { id = "com.github.ben-manes.versions", version = "0.53.0" }
