Add initial comment results

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ xcuserdata
 .kotlin
 #So we don't accidentally commit our private keys
 *.gpg
+# Claude Code local files
+.claude/plans/
+.claude/settings.local.json
