--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ json = "1.9.0"
 kotlin = "2.3.0"
 ktor = "3.3.3"
 markdown = "0.7.3"
+mockk = "1.13.16"
 android-minSdk = "24"
 android-compileSdk = "36"
 vanniktechMavenPublish = "0.35.0"
@@ -12,6 +13,7 @@ spotless = "8.1.0"
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 markdown = { module = "org.jetbrains:markdown", version.ref = "markdown" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "json" }
 ktor-bom = { module = "io.ktor:ktor-bom", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
